--- a/env.example
+++ b/env.example
@@ -13,8 +13,8 @@ JWT_EXPIRE=7d
 PORT=5000
 NODE_ENV=development
 
-# Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:5173
+# Frontend URLs (for CORS). Comma-separated for multiple origins
+FRONTEND_URLS=http://localhost:5173
 
 # Email Configuration (for future features)
 EMAIL_HOST=smtp.gmail.com
